--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,15 @@ hr {
 }
 
 #input {
-  height: 100px;
-  padding: 20px;
+  position: relative;
+  height: 73px;
+  padding-left: 20px;
 }
 
 #stock-title {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   font-size: 20px;
 }
 
@@ -46,5 +50,5 @@ hr {
   width: 100%;
   top: 0;
   bottom: 0;
-  margin-top: 100px;
+  margin-top: 73px;
 }
