--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,12 @@ hr {
   padding: 0 20px 20px 20px;
   overflow-y: auto;
 }
+
+.info {
+  margin-bottom: 20px;
+}
+
+.info span {
+  font-size: 20px;
+  margin-right: 20px;
+}
