--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ hr {
   font-size: 20px;
   margin-right: 20px;
 }
+
+#message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+}
